fix padding of main for visibility with search bar

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  overscroll-behavior-y: none;
 }
 
 header {
@@ -81,8 +80,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* padding-bottom: 95px; */
-  height: 90vh;
+  padding-bottom: 95px;
 }
 
 footer {
@@ -188,7 +186,6 @@ td {
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   padding: 10px 20px 0;
-  height: 600px;
   display: flex;
   flex-direction: column;
   align-items: center;
